# gcs-cromwell-cleaner

./: .gitignore  Cargo.toml  README.md
src/: main.rs
